update target name

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -51,7 +51,7 @@
       "imports": {
         "single-spa-react": "https://cdn.jsdelivr.net/npm/single-spa-react@4.6.0/lib/system/single-spa-react.min.js",
         "@single-spa/welcome": "https://unpkg.com/single-spa-welcome/dist/single-spa-welcome.js",
-        "@guille/root-mfe": "https://guille-gallo.github.io/root-mfe/guille-root-config.js",
+        "@guille/root-config": "https://guille-gallo.github.io/root-mfe/guille-root-config.js",
         "@guille/mfe":"https://guille-gallo.github.io/news-reader-mfe/guille-mfe.js",
         "@guille/bookstore-mfe":"https://guille-gallo.github.io/bookstore-mfe/bookstore-mfe.js"
       }
