--- a/src/index.ejs
+++ b/src/index.ejs
@@ -20,7 +20,7 @@
         "@guille/root-config": "https://guille-gallo.github.io/root-mfe/guille-root-config.js",
         "@guille/home-mfe": "https://guille-gallo.github.io/home-mfe/guille-home.js",
         "@guille/navbar": "https://guille-gallo.github.io/navbar-mfe/guille-navbar.js",
-        "@guille/mfe": "https://guille-gallo.github.io/news-reader-mfe/guille-mfe.js",
+        "@guille/tech-news-reader": "https://guille-gallo.github.io/news-reader-mfe/guille-mfe.js",
         "@guille/bookstore-mfe": "https://guille-gallo.github.io/bookstore-mfe/bookstore-mfe.js"
       }
     }
